# develop_shop

./: .gitignore  CODEOWNERS  README.md  azure-pipelines.yml  docker-compose.yml  makefile  pyproject.toml
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  demo.py  fast_store.db  makefile  passenger_wsgi.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/apps/: main.py
backend/apps/accounts/: models.py  routers.py  schemas.py
backend/apps/accounts/faker/: data.py
backend/apps/accounts/services/: authenticate.py  password.py  permissions.py  token.py  user.py
backend/apps/accounts/tests/: test_account.py  test_user.py
backend/apps/attributes/: models.py
backend/apps/core/: base_test_case.py  date_time.py
backend/apps/core/services/: email_manager.py  media.py
backend/apps/healthcheck/: routers.py  schemas.py
backend/apps/no_auth_orders/: models.py  routers.py  schemas.py  services.py
backend/apps/orders/: models.py  routers.py  schemas.py  services.py
backend/apps/products/: models.py  routers.py  schemas.py  services.py
backend/apps/products/faker/: data.py
backend/apps/products/inter_tests/: test_product.py
backend/apps/products/tests/: test_product.py  test_product_media.py  test_variant.py
backend/backend/: pyproject.toml
backend/backend/src/common/: base_schema.py
backend/config/: database.py  routers.py  settings.py
backend/src/: main.py
backend/src/routers/address/: router.py
huongvietfood/backend/: README.md  pyproject.toml
huongvietfood/backend/src/: main.py
(+116 files in other folders)
