[tool.poetry]
name = "huongvietfood"
version = "0.1.0"
description = ""
authors = ["Erosnguyen <cuong123go@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
black = "^24.4.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
